--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -1,4 +1,4 @@
-.topFixedBanner{
+.topFixedBanner {
     background-image: url(../image/banner.jpg);
     min-height: 550px;
     background-attachment: fixed;
@@ -7,7 +7,7 @@
     background-size: cover;
 }
 
-.topBannerOverlay{
+.topBannerOverlay {
     position: absolute;
     min-height: 550px;
     width: 100%;
@@ -15,14 +15,16 @@
 }
 
 .topContent {
- margin-top: 10em;
+    margin-top: 15em;
 }
+
 .topTitle {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     color: #ffffff;
     font-size: 48px;
 }
+
 .topSubTitle {
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
@@ -39,11 +41,11 @@
     margin: 5px;
     height: 22rem;
     padding: 60px 30px 60px 30px;
-    box-shadow: 0 0 8px 0  rgb(4, 55, 105, 0.2);
+    box-shadow: 0 0 8px 0 rgb(4, 55, 105, 0.2);
 }
 
 .serviceCard:hover {
-    box-shadow: 0 0 16px 0  rgb(4, 55, 105, 0.2);
+    box-shadow: 0 0 16px 0 rgb(4, 55, 105, 0.2);
 }
 
 .serviceName {
@@ -63,7 +65,7 @@
 }
 
 .serviceMainTitle {
-    color:  #051b35;
+    color: #051b35;
     margin-top: 5rem;
     margin-bottom: 3rem;
     font-family: 'Montserrat', sans-serif;
@@ -77,4 +79,50 @@
     width: 100px;
     margin: -1.9rem auto 0;
     margin-bottom: 3rem;
+}
+
+.navTitle {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #ffffff !important;
+    font-size: 30px;
+}
+
+.navTitleScroll {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #051b35 !important;
+    font-size: 30px;
+}
+
+.navBackground {
+    -webkit-transition: background-color 400ms linear;
+    -moz-transition: background-color 400ms linear;
+    -o-transition: background-color 400ms linear;
+    background-color: rgb(00, 00, 00, 0.0) !important;
+    transition: background-color 400ms linear;
+}
+
+.navBackgroundScroll {
+    -webkit-transition: background-color 400ms linear;
+    -moz-transition: background-color 400ms linear;
+    -o-transition: background-color 400ms linear;
+    background-color: #ffffff !important;
+    transition: background-color 400ms linear;
+}
+
+.navItem {
+    text-decoration: none !important;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff !important;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.navItemScroll {
+    text-decoration: none !important;
+    font-family: 'Montserrat', sans-serif;
+    color: #000000 !important;
+    font-weight: 700;
+    font-size: 16px;
 }
