--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -126,3 +126,71 @@
     font-weight: 700;
     font-size: 16px;
 }
+
+.summaryFixedBanner {
+    background-image: url(../image/summary.jpg);
+    min-height: 400px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.summaryBannerOverlay {
+    position: absolute;
+    min-height: 400px;
+    width: 100%;
+    background: rgba(27, 31, 92, 0.7);
+}
+
+.countNumber {
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+}
+
+.countTitle {
+    color: #ffd900;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+}
+
+.countBottom {
+    background: #ffffff none repeat scroll 0 0;
+    height: 2px;
+    width: 60px;
+    margin-bottom: 3rem;
+    margin: 0 auto 0;
+}
+
+.cardTitle {
+    color: #000000;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+}
+
+.cardSubTitle {
+    color: #000000;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.workCard {
+    margin-top: 25%;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+.iconBullet {
+    color: #051b35;
+    font-size: 16px;
+}
+
+.iconProject {
+    font-size: 40px;
+    color: #ffffff;
+}
