--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -221,3 +221,119 @@
     font-size: 15px;
     text-decoration: none;
 }
+
+.videoCard {
+    box-shadow: 0 13px 10px -5px;
+    padding: 8rem 3rem 8rem 3rem;
+    background-color: #051b35;
+    margin: 20px auto;
+    border-radius: 5px;
+}
+
+.videoText {
+    margin-top: 2%;
+}
+
+.iconVideo {
+    font-size: 40px;
+    color: #ffffff;
+}
+
+.iconVideo:hover {
+    cursor: pointer;
+}
+
+.sliderBack {
+    background-color: #051b35;
+min-height: 400px;
+}
+
+.reviewBottom {
+    background: #ffffff none repeat scroll 0 0;
+    height: 3px;
+    width: 100px;
+    margin: -1.9rem auto 0;
+    margin-bottom: 3rem;
+}
+
+.reviewMainTitle {
+    color: #ffffff;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+}
+
+.circleImg {
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    border: 1px solid #051b35;
+    border-radius: 50%;
+}
+
+.reviewName {
+    color: #ffffff;
+    margin-top: 1rem;
+    font-family: 'Raleway', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.reviewDescription {
+    color: #ffffff;
+    margin-top: 1rem;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.slick-dots {
+    margin-bottom: 10px !important;
+}
+.slick-dots li button {
+    color: #ffffff !important;
+}
+
+.slick-dots li button:before {
+    color: #ffffff !important;
+}
+
+.aboutMeImg {
+    width: 550px;
+    height: 550px;
+    background-color: #051b35;
+    border-radius: 50%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    float: right;
+}
+
+.aboutImg {
+    height: 100%;
+    margin-top: 210px;
+}
+
+.aboutMeBody {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.aboutMeTitle {
+    color: #051b35;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+}
+
+.aboutMeDescription {
+    color: #051b35;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+}
